@@ -59,6 +59,22 @@ AC_DEFUN([URBI_WITH_OPENHRP_REQUIRED],
 ])
 
 
+
+AC_DEFUN([URBI_WITH_ROBOT],
+[AC_ARG_WITH([robot],
+	     [AC_HELP_STRING([--with-robot=robot-name],
+			     [define robot name [HRP2JRL]])],
+	     [], [with_robot=HRP2JRL])
+
+case $with_robot in
+   "") ROBOT=HRP2JRL
+       ;;
+    *) ROBOT=$with_robot
+       ;;
+esac
+])
+
+
 ## Local Variables:
 ## mode: autoconf
 ## End:
